完善jinfo的文档